# kernel

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/console/: Cargo.toml  build.rs  build.sh  ctrld-fixed-10r.pcf.lz4
crates/console/src/: editor.rs  grid.rs  input.rs  main.rs  vt100.rs
crates/console/src/format/: pcf.rs  qoi.rs
crates/device-tree/: Cargo.toml
crates/display-client/: Cargo.toml
crates/display-proto/: Cargo.toml
crates/display-server/: Cargo.toml  build.sh
crates/display-server/assets/: close-pressed.qoi  close.qoi  cursor.qoi
crates/display-server/src/: framebuffer.rs  main.rs
crates/doomgeneric/: Cargo.toml  build.rs  build.sh
crates/elf/: Cargo.toml
crates/endian/: Cargo.toml
crates/filesystem/: Cargo.toml  ext4_notes.txt
crates/gfx/: Cargo.toml
crates/init/: .gitignore  Cargo.toml  build.rs  build.sh  editor.rs  example.rs  example_fixed.rs  fs.arc  hello.rs  ls.rs  sharedMemTest.rs  shell.rs  signals_test.rs  test.sh
crates/initfs/: Cargo.toml
crates/kernel/: .gitignore  Cargo.toml  bcm2711-rpi-4-b.dtb  build.rs  justfile  log.txt  mmapTest.elf  output.dts  output1.txt  output2.txt  pinceros.qoi  script.ld  sizes
crates/kernel/examples/: async.rs  async_timer.rs  csud.rs  device.rs  event.rs  ext2.rs  hid.rs  keyboard.rs  load.rs  loop.rs  main.rs  mmapTest.rs  mouse.rs  net.rs  sd.rs  sync-test.rs  tests.rs  timer.rs  user.rs  vaToPaKernel.rs  vaToPaUser.rs  vsync.rs
crates/kernel/examples/tests/: mod.rs  test_impl.rs
crates/kernel/examples/vsync/: qoi.rs
crates/kernel/scripts/: attach-serial.sh  build-debug.sh  build.sh  compile-init.sh  debug-ui.sh  debug.sh  debug_ui.sh  run-rpi3b.sh  run-ui.sh  run-usb-debug.sh  run-usb-passthrough.sh  run-usb.sh  run.sh  run_network.sh  run_network_ui.sh  run_ui.sh  setup-tap-joyce.sh  setup-tap.sh  test_socket.py
crates/kernel/src/: arch.rs  boot.rs  context.rs  device.rs  dtb.rs  event.rs  exceptions.rs  heap.rs  lib.rs  main.rs  memory.rs  object.rs  process.rs  ringbuffer.rs  runtime.rs  scheduler.rs  sync.rs  syscall.rs  task.rs  test.rs  thread.rs  util.rs
crates/kernel/src/arch/: stubs.rs
crates/kernel/src/arch/aarch64/: boot.rs  interrupts.rs  mod.rs
crates/kernel/src/arch/aarch64/memory/: machine.rs  mod.rs  palloc.rs  table.rs  vmm.rs
crates/kernel/src/device/: bcm2835_aux.rs  bcm2836_intc.rs  console.rs  dwc_otg.rs  dwc_otgreg.rs  gic.rs  gpio.rs  macros.rs  mailbox.rs  pcm.rs  rng.rs  sdcard.rs  system_timer.rs  timer.rs  uart.rs  usb.rs  usbreg.rs  watchdog.rs
crates/kernel/src/device/usb/: CSUD_LICENSE  CSUD_README  configuration.rs  controller.rs  device.rs  hcd.rs  types.rs  usb.rs  usb_bus.rs  usb_controller.rs  usb_core.rs  usb_device.rs  usb_hub.rs  usb_request.rs  usb_transfer.rs  usbd.rs  usbdi.rs  usbreg.rs
crates/kernel/src/device/usb/controller/: dwc_otg.rs
crates/kernel/src/device/usb/device/: ax88179.rs  hid.rs  hub.rs  net.rs  rndis.rs
crates/kernel/src/device/usb/device/hid/: keyboard.rs  mouse.rs
crates/kernel/src/device/usb/hcd/: dwc.rs  hcd.rs  hub.rs
crates/kernel/src/device/usb/hcd/dwc/: dwc_otg.rs  dwc_otgreg.rs  roothub.rs
crates/kernel/src/device/usb/usbd/: descriptors.rs  device.rs  endpoint.rs  pipe.rs  request.rs  transfer.rs  usbd.rs
crates/kernel/src/device/usb2/dwc2/: dwc_otg.c  dwc_otg.h  dwc_otg_acpi.c  dwc_otg_fdt.c  dwc_otg_fdt.h  dwc_otg_hisi.c  usb_controller.c
crates/kernel/src/event/: async_handler.rs  context.rs  exceptions.rs  mod.rs  process.rs  scheduler.rs  task.rs  thread.rs
crates/kernel/src/fs/: ext2.rs  initfs.rs  mod.rs
crates/kernel/src/memory/: machine.rs  mod.rs  vmm.rs
crates/kernel/src/networking/: mod.rs
crates/kernel/src/networking/iface/: arp.rs  cdcecm.rs  dhcp.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  socket.rs  tcp.rs  udp.rs
crates/kernel/src/networking/repr/: arp.rs  dev.rs  dhcp.rs  dns.rs  ethernet.rs  http.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
crates/kernel/src/networking/scripts/: set_tap.sh
crates/kernel/src/networking/socket/: bindings.rs  env.rs  mod.rs  raw.rs  set.rs  tagged.rs  tcp.rs  udp.rs
crates/kernel/src/networking/utils/: arp_cache.rs  checksum.rs  ring.rs  slice.rs
crates/kernel/src/process/: fd.rs  mem.rs  signal.rs
crates/kernel/src/sync/: barrier.rs  blocking_lock.rs  condvar.rs  handler_table.rs  init.rs  interrupts.rs  lock.rs  once_cell.rs  per_core.rs  semaphore.rs  time.rs
crates/kernel/src/syscall/: channel.rs  creds.rs  exec.rs  fb_hack.rs  file.rs  mmap.rs  mod.rs  pipe.rs  proc.rs  semaphore.rs  signal.rs  sync.rs  time.rs
crates/kernel/src/usb/: usb.rs  usb_device.rs
crates/kernel/src/usb/controller/: dwc_otg.rs  dwc_otgreg.rs
crates/libcsud/: Cargo.toml  build.rs
crates/lz4/: Cargo.toml
crates/mmapTest/: .gitignore  Cargo.toml  (+3 more)
crates/networking/: Cargo.toml
crates/networking/scripts/: set_forward.sh
crates/networking/socket/: README.md  bindings.rs  env.rs  mod.rs  raw.rs  set.rs  tagged.rs  udp.rs
crates/networking/src/: lib.rs
crates/networking/src/iface/: arp.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  socket.rs  udp.rs
crates/networking/src/repr/: arp.rs  dev.rs  ethernet.rs  icmp.rs  ipv4.rs  udp.rs
crates/networking/src/socket/: bindings.rs  env.rs  mod.rs  raw.rs  set.rs  tagged.rs  udp.rs
crates/networking/src/utils/: arp_cache.rs  checksum.rs  mod.rs  range.rs  ring.rs  slice.rs
crates/paint/: Cargo.toml  build.sh
crates/paint/src/: main.rs
crates/show/: Cargo.toml  build.sh
crates/show/src/: main.rs
crates/ulib/: Cargo.toml  compile.sh  script.ld
crates/ulib/src/: heap_impl.rs  lib.rs  macros.rs  newlib_stubs.rs  runtime.rs  spinlock.rs  stdout.rs  sys.rs  thread.rs
disk-image/: test2.txt
scripts/: build-debug.sh  build.sh  debug.sh  debug_active.sh  debug_ui_active.sh  run.sh  run_ui.sh
src/: boot.rs  device.rs  exceptions.rs  heap.rs  main.rs  sync.rs
(+120 files in other folders)
