[workspace]
resolver = "2"
members = [
    "crates/console",
    "crates/device-tree",
    "crates/display-client",
    "crates/display-proto",
    "crates/display-server",
    "crates/elf",
    "crates/endian",
    "crates/filesystem",
    "crates/gfx",
    "crates/init",
    "crates/initfs",
    "crates/kernel",
    "crates/lz4",
    "crates/shell",
    "crates/ulib",
]

[profile.release]
opt-level = 2
strip = false
incremental = false
debug = 2
panic = "abort"
debug-assertions = true
overflow-checks = true

[profile.dev]
incremental = false
panic = "abort"
