[package]
name = "console"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", default-features = false }
unicode-segmentation = "1.12"

display-client = { path = "../display-client" }
lz4 = { path = "../lz4" }
ulib = { path = "../ulib", features = ["heap-impl"] }
gfx = { path = "../gfx" }

[dev-dependencies]
ulib = { path = "../ulib", features = ["test"] }
