[package]
name = "display-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", default-features = false }
linked_list_allocator = "0.10"
glam = { version = "0.30", default-features = false, features = ["nostd-libm"] }
thunderdome = { version = "0.6", default-features = false }
bitflags = "2.8.0"

display-proto = { path = "../display-proto" }
ulib = { path = "../ulib", features = ["heap-impl"] }
gfx = { path = "../gfx" }
lz4 = { path = "../lz4" }

[dev-dependencies]
ulib = { path = "../ulib", features = ["test"] }
