[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.8.0"
bytemuck = { version = "1.19.0", default-features = false }
smallbox = { version = "0.8.6", default-features = false }
linked_list_allocator = "0.10.5"
tinyvec = "1.9"

device-tree = { path = "../device-tree" }
endian = { path = "../endian" }
elf = { path = "../elf" }
initfs = { path = "../initfs"}
gfx = { path = "../gfx" }

[dev-dependencies]
libcsud = { path = "../libcsud" }
