[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.8.0"
bytemuck = { version = "1.19.0", default-features = false }
smallbox = { version = "0.8.6", default-features = false }

device-tree = { path = "../device-tree" }
endian = { path = "../endian" }
elf = { path = "../elf" }
initfs = { path = "../initfs"}
filesystem = { path = "../filesystem" }
