[package]
name = "networking"
version = "0.1.0"

[dependencies]
byteorder = { version = "1.4", default-features = false }
log = { version = "0.4" , default-features = false }

[[app]]
name = "arping"

[[app]]
name = "dev_up"

[[app]]
name = "ping"

[[app]]
name = "traceroute"

[[app]]
name = "udp_cat"

[[app]]
name = "udp_echo"

