[package]
name = "ulib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
linked_list_allocator = { version = "0.10", optional = true }

[features]
default = ["runtime"]
runtime = []
thread = []
heap-impl = ["linked_list_allocator"]
test = []
alloc = []
newlib-stub = []
